---
source: book/tests/snapshot.rs
expression: "func fahrenheit_to_celsius temp -> (temp - 32) / 1.8\n\nfrom cities\nderive temp_c = (fahrenheit_to_celsius temp_f)\n"
---
func fahrenheit_to_celsius temp -> temp - 32 / 1.8



from cities
derive (
  temp_c = fahrenheit_to_celsius temp_f
)



